Suggestions for cleaning up function

--- a/noise_ceiling_version2.ipynb
+++ b/noise_ceiling_version2.ipynb
@@ -630,47 +630,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_evaluation2(Y_res, design_matrix={}, evaluation_method=\"R_sqr\",num_run=8):\n",
+    "def model_evaluation2(Y_res, ModelList, evaluation_method=\"R_sqr\",num_run=8):\n",
     "    #design_matrix: a dictionary of a list of design matrices (with name as index name)\n",
     "    \n",
-    "    #add noise ceiling model into the model dictionary\n",
-    "    design_matrix[\"noise ceiling\"]=None\n",
     "    \n",
     "    r_sqr_low_result=np.zeros((len(design_matrix),num_run))\n",
     "    r_sqr_up_result=np.zeros((len(design_matrix),num_run))\n",
     "    #split Y_res into n equal pieces according to the number of runs (n)\n",
     "    kf = KFold(n_splits=num_run)\n",
     "    i=0\n",
-    "    for train_index, test_index in kf.split(Y_res):\n",
+    "\n",
+    "    Corr_allrun=get_corr(Y_res)\n",
+    "\n",
+    "    n_model = len(ModelList)\n",
+    "    # Fit  \n",
+    "    for i in range(n_model)\n",
+    "        ModelList[i].fit(Corr_allrun)\n",
+    "        for train_index, test_index in kf.split(Y_res):\n",
+    "            Corr_test=get_corr(Y_res.loc[test_index])\n",
+    "            y=ModelList[i].predict()\n",
+    "            r_sqr_high_result[i]=get_r_sqr_againstIndependence(y,Corr_test)\n",
+    "            i+=1\n",
+    "        \n",
+    "        # Crossval prediction  \n",
+    "        for train_index, test_index in kf.split(Y_res):\n",
     "\n",
     "        #Calculating correlation matrix for train, test and all data\n",
-    "        Corr_train=get_corr(Y_res.loc[train_index])\n",
-    "        Corr_test=get_corr(Y_res.loc[test_index])\n",
-    "        Corr_allrun=get_corr(Y_res)\n",
+    "            Corr_train=get_corr(Y_res.loc[train_index])\n",
+    "            Corr_test=get_corr(Y_res.loc[test_index])\n",
     "        \n",
-    "        j=0\n",
-    "        for model_key, model_design_matr in design_matrix.items():\n",
-    "          \n",
-    "            if model_key==\"noise ceiling\":               \n",
-    "                lowModel=NoiseCeiling()                              \n",
-    "                upModel=NoiseCeiling()\n",
-    "                \n",
-    "            else:                           \n",
-    "                lowModel = LinearModel()               \n",
-    "                upModel = LinearModel()\n",
-    "                \n",
-    "            lowModel.fit(model_design_matr, Corr_train)\n",
-    "            upModel.fit(model_design_matr, Corr_allrun)\n",
-    "                                         \n",
-    "            #Calculating R^2 for the model\n",
-    "            if evaluation_method==\"R_sqr\":\n",
-    "                #Store lower and upper bound of R^2 for each model into a numpy array\n",
-    "                r_sqr_low_result[j,i]=lowModel.get_r_sqr_againstIndependence(model_design_matr,Corr_test)\n",
-    "                r_sqr_up_result[j,i]=upModel.get_r_sqr_againstIndependence(model_design_matr,Corr_test)\n",
-    "            \n",
-    "            j+=1\n",
-    "            \n",
-    "        i+=1\n",
+    "            ModelList[i].fit(Corr_train)\n",
+    "            y= ModelList[i].predict()\n",
+    "            r_sqr_low_result[i]=get_r_sqr_againstIndependence(y,Corr_test)\n",
+    "            i+=1 # Use enumerate \n",
     "            \n",
     "    #taking average among 8 fits (taking average along the row)     \n",
     "    R_sqr_lowbound=np.mean(r_sqr_low_result, axis = 1)\n",
@@ -1489,7 +1481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
